--- a/Project/styles/style.css
+++ b/Project/styles/style.css
@@ -770,6 +770,9 @@ padding: 4%;
 
   flex-direction: row;
  
+  animation-duration: 5s;
+  animation-name: slidein;
+  animation-iteration-count:1;
   
 }
 
@@ -779,8 +782,7 @@ padding: 4%;
   max-width: 95%;
   min-width: 95%;
   margin: 45px auto 5px auto;
-
-}
+ }
 
 .bar_Novedades :hover > :not(:hover){
   opacity: 0.4;
@@ -830,9 +832,8 @@ padding: 4%;
   text-decoration: none;
   border-radius: 5px;
 
-  font-size: 30px;
+  font-size: 27px;
   
-
 }
 
 .bar_Novedades ul li a:hover {
@@ -842,3 +843,21 @@ padding: 4%;
   border-radius: 10px;
   border-radius: 50px;
 }
+
+
+
+.titulo_seccion{
+ font-size: 40px;
+
+}
+
+.titulo_noticia{
+  font-size: 25px;
+}
+
+
+.contenido_noticas{
+  font-size: 20px;
+ 
+}
+
