--- a/Project/styles/style.css
+++ b/Project/styles/style.css
@@ -45,15 +45,17 @@
       filter: brightness(1);
   }
 }
-.container.section  {
+.container_section  {
 
- /*background-color: #576CBC;*/
-  padding: 10px ;
-  border-radius: 24px;
-  background: linear-gradient(145deg, #3b65fcc3, #4e62a9f4);
-  box-shadow:  5px 5px 0px #3e4d85,
-               -5px -5px 0px #708bf3;
-  backdrop-filter: blur(15px);
+  background-color: #40008f82;
+ backdrop-filter: blur(15px);
+ border-radius: 3% ;
+ margin: 5% 5% 0 5%;
+ background-size: cover;
+ background-position: center;
+ color: #ffffff;
+ text-align: center;
+ padding: 100px 0;
 }
 
 
@@ -373,6 +375,25 @@ h2{
    padding: 100px 0;
    
   }
+
+
+  .hero_section{
+    
+    background-color: #40008f82;
+    backdrop-filter: blur(15px);
+    border-radius: 3% ;
+    margin: 5% 5% 0 5%;
+    background-size: cover;
+    background-position: center;
+    color: #ffffff;
+    text-align: center;
+    padding: 100px 0;
+
+  }
+
+  .hero_section .container{
+    margin-top: 5vh;
+    }
 
 .hero .container{
   margin-top: 5vh;
@@ -864,3 +885,98 @@ padding: 4%;
  
 }
 
+
+
+/*Login*/
+.passemail{
+
+margin: 2% auto 2% auto;
+
+
+}
+
+.passemailinputs p{
+  margin-top: 5%;
+
+font-size: small;
+}
+
+
+
+.btnResgistrar{
+  background-color: #576bbc;
+  color: #ffffff;
+  padding: auto;
+  border: none;
+  border-radius: 5px;
+  font-size: 15px;
+  text-decoration: none;
+  transition: background-color 0.5s;
+}
+
+.passemailinputs{
+  position: relative;
+  border-radius: 3%;
+  background-color: #3e4d856d;
+  filter: blur(15);
+  margin: 0px 500px 0px 500px;
+  padding: 5px 0 5px 0;
+  
+}
+
+
+.passemailinputs h1{
+ 
+  margin-top: 5%;
+  border-radius: 8%;
+  padding: 0.5%;
+  text-align: left;
+
+}
+
+.btnResgistrar:hover {
+  background-color:#0af;
+}
+
+.btnResgistarEntrar{
+  text-transform: uppercase;
+  background-color: #3e4d85;
+  text-align: center;
+  font-size: medium;
+  padding: 10px;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 5px;
+}
+
+
+.btnResgistarEntrar :hover{
+color: white;  
+}
+
+
+
+.passemail{
+  color: white;
+  background-color: rgba(0, 170, 255, 0);
+  padding: 1% ;
+  border: none;
+  border-bottom: 1.5px #bbb solid;
+  width: 100%;
+  
+ 
+  
+}
+
+
+.passemail:hover{
+ 
+  transition: 1.2s;
+  background-color: rgba(70, 70, 70, 0.336);
+  
+}
+
+.passemail :focus{
+
+  border: none;
+}
