--- a/Project/styles/style.css
+++ b/Project/styles/style.css
@@ -785,14 +785,31 @@ padding: 4%;
 }
 
 
+@keyframes slideup{
+
+from{
+
+  transform: translateY(3000%);
+}
+
+to {
+  
+  transform: translateY(0%);
+}
+
+}
+      
+
+
+
 
 .bar_Novedades {
   display: flex;
 
   flex-direction: row;
   
-  animation-duration: 5s;
-  animation-name: slidein;
+  animation-duration: 3s;
+  animation-name: slideup;
   animation-iteration-count:1;
   
 }
@@ -872,11 +889,12 @@ padding: 4%;
 
 .titulo_seccion{
  font-size: 40px;
-
+margin-top: -60px;
 }
 
 .titulo_noticia{
   font-size: 25px;
+ text-align: center;
 }
 
 
